# pyVHACD

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: conda.yml  pip.yml  release.yml  wheels.yml
src/pyVHACD/: main.cpp  pyVHACD.cpp
src/vhacdx/: main.cpp
tests/: test.py  test_vhacd.py
