[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"


[project]
name = "vhacdx"
version = "0.0.4"
requires-python = ">=3.7"

authors = [{name = "Thomas Wolf", email = "thomas@huggingface.co"}]
description = "Python bindings for VHACD"
urls = {Homepage = "https://github.com/trimesh/vhacdx"}
dependencies = ["numpy"]

[project.readme]
file = "README.md"
content-type = "text/markdown"
 
[options]
zip_safe = false

[options.extras_require]
test = "pytest"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"

# skip platforms that don't have numpy wheels
test-skip = "*universal2:arm64 pp31* *i686 *musllinux*"


[tool.ruff]
target-version = "py37"
# See https://github.com/charliermarsh/ruff#rules for error code definitions.
select = [
    # "ANN", # annotations
    "B", # bugbear
    "C", # comprehensions
    "E", # style errors
    "F", # flakes
    "I", # import sorting
    "RUF100", # meta
    "U", # upgrade
    "W", # style warnings
    "YTT", # sys.version
]

ignore = [
  "C901", # Comprehension is too complex (11 > 10)
  "N802", # Function name should be lowercase
  "N806", # Variable in function should be lowercase
  "E501", # Line too long ({width} > {limit} characters)
  "B904", # raise ... from err
  "B905", # zip() without an explicit strict= parameter
  "ANN101", # type hint for `self`
  "ANN002", # type hint for *args
  "ANN003", # type hint for **kwargs
]
line-length = 90


[tool.black]
line-length = 90
target-version = ['py37']